# julep

./: .agentignore  .agentindexignore  .cursorignore  .cursorindexignore  .cursorrules  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  1. Exploratory Data Analysis.ipynb  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEEDBACK.md  Intelligent Content Optimization Workflow.ipynb  LICENSE  MCP_IMPLEMENTATION_SUMMARY.md  README copy.md  README-.md  README-CN.md  README-FR.md  README-JA.md  README-JP.md  README.FR.md  README.md  README_CN.md  README_FR.md  SCRATCHPAD.md  TODO.md  TODOS.md  composable_agents_algebra.hs  cozo.db  docker-bake.hcl  docker-compose.cpu.yml  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  elnino_capacity_swarm.py  (+15 more)
agents-api/: .gitignore  .pytest-runtimes  .tool-versions  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.migration  Dockerfile.temporal  Dockerfile.worker  README.md  TODOS.md  config.yml  docker-compose-api.yml  docker-compose.yml  gunicorn_conf.py  openapi.json  poe_tasks.toml  pyproject.toml  pytype.toml  uuid_extensions.pyi
agents-api/agents_api/: __init__.py  app.py  embed_models_registry.py  env.py  exceptions.py  middleware.py  model_registry.py  telemetry.py  web.py
agents-api/demo/: example.py  julep.py
agents-api/docs/: SQL_INJECTION_PREVENTION.md
agents-api/examples/: sql_injection_prevention_demo.py
agents-api/memory_api/: env.py  web.py
agents-api/migrations/: migrate_1704699172_init.py  migrate_1704699595_developers.py  migrate_1706090164_entries_timestamp.py  migrate_1707537826_rename_additional_info.py  migrate_1709200345_extend_agents_default_settings.py  migrate_1709292828_presets.py  migrate_1709631202_metadata.py  migrate_1709806979_entry_relations_to_relations.py  migrate_1709810233_memories.py  migrate_1712309841_simplify_memories.py  migrate_1712405369_simplify_instructions.py  migrate_1714119679_session_render_templates.py  migrate_1714566760_change_embeddings_dimensions.py  migrate_1716013793_session_cache.py  migrate_1716847597_support_multimodal_chatml.py  migrate_1716939839_task_relations.py  migrate_1717239610_token_budget.py  migrate_1721576813_extended_tool_relations.py  migrate_1721609661_task_tool_ref_by_name.py  migrate_1721609675_multi_agent_multi_user_session.py  migrate_1721666295_developers_relation.py  migrate_1721678846_rename_information_snippets.py  migrate_1722107354_rename_executions_arguments_col.py  migrate_1722115427_rename_transitions_from.py  migrate_1722710530_unify_owner_doc_relations.py  migrate_1722875101_add_temporal_mapping.py  migrate_1723307805_add_lsh_index_to_docs.py  migrate_1723400730_add_settings_to_developers.py  migrate_1725153437_add_output_to_executions.py  migrate_1725323734_make_transition_output_optional.py  migrate_1727235852_add_forward_tool_calls_option.py  migrate_1727922523_add_description_to_tools.py  migrate_1728159295_add_allow_recursion_to_tasks.py  migrate_1729114011_tweak_proximity_indices.py  migrate_1731143165_support_tool_call_id.py  migrate_1731953383_create_files_relation.py  migrate_1733493650_add_recall_options_to_sessions.py  migrate_1733755642_transition_indices.py  migrate_1733985509_add_columns_to_indices.py
agents-api/notebooks/: 01-revise-entities.ipynb  02-trim-messages.ipynb  03-summarise.ipynb  RecSum-experiments.ipynb  main-3-Copy1.ipynb  main-3.ipynb  schema.ipynb  test-chat.json
agents-api/scripts/: agents_api.py
agents-api/tests/: conftest.py  fixtures.py  test_activities.py  test_activities_utils.py  test_agent_metadata_filtering.py  test_agent_queries.py  test_agent_routes.py  test_agents.py  test_base_evaluate.py  test_chat_metadata.py  test_chat_routes.py  test_chat_streaming.py  test_developer_queries.py  test_docs_metadata_filtering.py  test_docs_queries.py  test_docs_routes.py  test_entries_queries.py  test_entry_queries.py  test_event_streaming.py  test_execution_queries.py  test_execution_workflow.py  test_expression_validation.py  test_file_routes.py  test_file_streaming.py  test_files_queries.py  test_files_routes.py  test_format_tool.py  test_get_doc_search.py  test_litellm_utils.py  test_memory_utils.py  test_messages_truncation.py  test_metadata_filter_utils.py  test_middleware.py  test_mmr.py  test_model_validation.py  test_nlp_utilities.py  test_pg_query_step.py  test_prepare_for_step.py  test_query_utils.py  test_responses_routes.py  (+30 more)
agents-api/todos/: python-3.13-migration.md
backend/: .gitignore  Dockerfile  generate.py  main.py  pyproject.toml
backend/backend/: __init__.py  agent.py  beliefs.py  generate.py  keywords.py  logger.py  main.py  truncation.py
backend/public/: asset-manifest.json  index.html
backend/static/: index.html  manifest.json
chainlit/: .gitignore  chat.py  pyproject.toml
chainlit/.chainlit/: config.toml
chainlit/notebooks/: Untitled.ipynb  Untitled1.ipynb
cli/: .gitignore  AGENTS.md  CLAUDE.md  README.md  cli-reference.md  poe_tasks.toml  pyproject.toml  spec.md
cli/julep_cli/: __init__.py  __main__.py  agents.py  app.py  auth.py  chat.py  executions.py  importt.py  init.py  log.py  logs.py  ls.py  models.py  run.py  sync.py  tasks.py  tools.py  utils.py
cli/tests/: test_auth.py
dataset/: pyproject.toml
integrations/: Dockerfile  integrations.py  main.py  models.py  pyproject.toml  router.py
integrations-service/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  gunicorn_conf.py  poe_tasks.toml  pyproject.toml  pytest.ini  pytype.toml
julep_common/: README.md  pyproject.toml
memory/: .gitignore  .tool-versions  Dockerfile  TODOS.md  openapi.yaml  pyproject.toml
model-api/: .gitignore  Dockerfile  README.md  docker-compose.yml  modal_deployment.py  modal_mixtral.py  modal_production.py  modal_staging.py  pyproject.toml  test_chat_template.py
model-serving/: Dockerfile  docker-compose.yml  modal_staging.py  pyproject.toml  update_tokenizer_template.py
responses-api/: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  gunicorn_conf.py  poe_tasks.toml  pyproject.toml  pytype.toml
(+6897 files in other folders)
