[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composable-agents"
version = "0.1.0"
description = "A typed, durable framework for composable serverless agents on Temporal."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Julep AI" }]
keywords = ["agents", "llm", "temporal", "durable-execution", "mcp", "workflow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# The authoring + compile path (DSL, freeze, validate, capabilities, deploy, the
# pure interpreter) depends only on PyYAML. The durable runtime, plan compilation
# inside workflows, and span export are optional extras.
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Durable execution on Temporal (workflows, activities, worker, client helpers).
temporal = ["temporalio>=1.7"]
# Durable execution on DBOS (steps, flow workflow, chaining runner).
# dbos requires Python >=3.11; the marker keeps the extra resolvable on 3.10,
# where importing the backend raises a clear ImportError instead.
dbos = ["dbos>=2.18; python_version >= '3.11'"]
# Native tool (HTTP tool) calls from the callTool activity.
http = ["httpx>=0.24"]
# Experimental Claude Managed Agents (CMA) backend (HTTP, beta-pinned).
cma = ["httpx>=0.24"]
# Rich dotctx layout (Jinja2 templates compiled into registered renderers).
dotctx = ["jinja2>=3.1"]
# Multi-provider LlmCaller via any-llm (execution/llm.py). Also install your
# provider extras alongside it, e.g. pip install 'any-llm-sdk[anthropic,openai]'.
# any-llm-sdk requires Python >=3.11; on 3.10 the LlmCaller raises a clear
# ImportError at call time instead (the marker keeps the extra resolvable).
providers = ["any-llm-sdk>=1.17; python_version >= '3.11'"]
# OpenTelemetry span export of the projection.
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
# Langfuse OTLP/HTTP export of the projection.
langfuse = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# Artifact distribution stores and bundle signing primitives (ed25519 lands in P2.3).
store = ["boto3>=1.34", "cryptography>=42"]
# Sandboxed wasm execution of bundle-sourced pures (wasmtime host; componentize-py is build-only/dev).
wasm = ["wasmtime>=45,<46"]
# Developer CLI (`ca`) — Typer-based porcelain over the composable_agents plumbing.
cli = ["typer>=0.12"]
# Everything needed to run the full test suite (including the Temporal E2E test)
# and to drive real providers from the examples. The unit tests inject a fake
# acompletion and never import any-llm, so the SDK + its provider plugins live
# here (dev) rather than in core; end users pull the slim ``providers`` extra.
dev = [
    "mypy>=1.10",
    "pytest>=7",
    "ruff>=0.5",
    "temporalio>=1.7",
    "dbos>=2.18; python_version >= '3.11'",
    "httpx>=0.24",
    "jinja2>=3.1",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "pydantic>=2",
    "types-PyYAML>=6.0",
    "wasmtime>=45,<46",
    "typer>=0.12",
    "any-llm-sdk[anthropic,openai,gemini,groq,mistral]>=1.17; python_version >= '3.11'",
]

[project.urls]
Repository = "https://github.com/julep-ai/julep-v2"
Issues = "https://github.com/julep-ai/julep-v2/issues"

[project.scripts]
composable-agents = "composable_agents.cli:main"
ca = "composable_agents.ca.cli:main"

[tool.setuptools.packages.find]
include = ["composable_agents*"]

[tool.setuptools.package-data]
# The vendored wasm executor component ships in the wheel so a pip-installed
# generic worker can run bundle-sourced pures in the wasm tier without the
# build-time componentize-py toolchain. The .cwasm cache and componentize-py
# generated bindings are NOT shipped (regenerated at build / first run).
composable_agents = ["py.typed", "execution/_wasm/*.wasm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The Temporal E2E test wraps its own asyncio loop, so no asyncio plugin mode is
# required; pure tests are synchronous.
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
# Vendored third-party WASI wheel sources (regex, pydantic-core) ship under
# _wasm/wasi_wheels/ so the env-component build can link them. They are upstream
# code, not ours to lint — exclude them exactly as mypy excludes _wasm/.
extend-exclude = ["composable_agents/execution/_wasm/wasi_wheels"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Existing docs and explanatory strings are intentionally prose-heavy; enforcing
# E501 now would create broad, non-behavioral churn unrelated to Phase 0.
#
# I001 and the listed UP rules are noisy on the current package: they would
# mostly reshuffle public re-export blocks or modernize annotations/imports
# across runtime modules. Keep those for a later formatting-only pass.
# UP045 = Optional[X] -> X | None; ruff 0.15 split it out of UP007, so it must be
# listed explicitly to defer annotation modernization with the rest.
ignore = ["E501", "I001", "UP007", "UP015", "UP035", "UP037", "UP045"]

[tool.ruff.lint.per-file-ignores]
# Public API re-exports are intentionally imported for package consumers.
"composable_agents/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
packages = ["composable_agents"]
strict = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
# composable_agents/execution/_wasm holds the wasm guest component plus the
# componentize-py-generated bindings (wit_world, poll_loop, async support). That
# code targets the wasi CPython guest (3.14, py3.12+ syntax), imports the
# build-only `wit_world` module, and is never imported by the host package, so it
# is out of scope for host strict typing.
exclude = '(^|/)composable_agents/execution/_wasm/'

[[tool.mypy.overrides]]
module = ["composable_agents.execution.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["composable_agents"]
# The root package conditionally re-exports Temporal symbols from the lenient
# execution layer. Keep those out of the pure-core error budget for now.
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["temporalio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true
