[tool.poetry]
name = "samantha-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
vocode = {git = "https://github.com/vocodedev/vocode-python.git"}
python-dotenv = "^1.0.0"
elevenlabs = "^0.2.18"
fastapi = "0.95.1"
transformers = "^4.30.2"
accelerate = "^0.20.3"
sentencepiece = "^0.1.99"
uvicorn = "0.21.1"
huggingface-hub = "^0.15.1"
requests = "^2.31.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
