[tool.poetry]
name = "samantha-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
vocode = {git = "https://github.com/whiterabbit1983/vocode-python"}
python-dotenv = "^1.0.0"
elevenlabs = "^0.2.18"
fastapi = "0.95.1"
transformers = "^4.30.2"
accelerate = "^0.20.3"
sentencepiece = "^0.1.99"
uvicorn = "0.21.1"
huggingface-hub = "^0.15.1"
requests = "^2.31.0"
httpx = "^0.24.1"
pytz = "^2023.3"
torch = {url = "https://download.pytorch.org/whl/nightly/cu121/torch-2.1.0.dev20230626%2Bcu121-cp310-cp310-linux_x86_64.whl"}
pycozo = {extras = ["embedded", "pandas", "requests"], version = "^0.7.2"}
keybert = "^0.7.0"
keyphrase-vectorizers = "^0.0.11"
pydantic = "<2"
assemblyai = "^0.12.0"
async-lru = "^2.0.3"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
