[tool.poetry]
name = "samantha"
version = "0.1.0"
description = ""
authors = ["Diwank Tomer"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
sentencepiece = "^0.1.99"
accelerate = "^0.20.3"
bitsandbytes = "^0.39.1"
datasets = "^2.13.0"
fire = "^0.5.0"
transformers = "^4.30.2"
protobuf = "<3.21"
torch = {url = "https://download.pytorch.org/whl/nightly/cu121/torch-2.1.0.dev20230620%2Bcu121-cp310-cp310-linux_x86_64.whl"}
huggingface-hub = "^0.15.1"
scipy = "^1.10.1"
chainlit = "^0.4.1"

[tool.poetry.group.dev.dependencies]
# ipython = "^8.14.0"
# ipykernel = "^6.22.0"
ipython = "^8.14.0"
ipykernel = "^6.23.2"
jupyterlab = "^4.0.2"
pycozo = {extras = ["embedded", "pandas", "requests"], version = "^0.7.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
