[tool.poetry]
name = "samantha"
version = "0.1.0"
description = "Samantha from 'Her'"
authors = ["Diwank Singh Tomer <diwank.singh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
environs = "^9.5.0"
turbo-chat = "^0.3.12"
python-dotenv = "^1.0.0"
sentencepiece = "^0.1.99"
torch = ">=2.0.0"
langchain = "^0.0.157"
openai = "^0.27.6"
redis = "^4.5.4"
tenacity = "^8.2.2"
pydash = "^7.0.2"
numpy = "^1.24.3"
scipy = "^1.10.1"
transformers = "^4.28.1"
datasets = "^2.12.0"
python-redis-cache = "^2.1.2"
holidays = "^0.26"
wandb = "^0.15.4"
names = "^0.3.0"
pycozo = {extras = ["embedded", "pandas", "requests"], version = "^0.7.2"}
jsonlines = "^3.1.0"
language-tool-python = "^2.7.1"
lmproof = "^0.3.0"
clean-text = {extras = ["gpl"], version = "^0.6.0"}
unidecode = "^1.3.6"
better-profanity = "^0.7.0"
py7zr = "^0.20.6"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"
jupyterlab = ">=4,<5"
ipywidgets = "^8.0.6"
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
